--- a/index.html
+++ b/index.html
@@ -1,98 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
+<head>
+    <meta charset="UTF-8">
     <title>Интернет-магазин</title>
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
-  <body>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
     <div id="app">
-      <header>
-        <div class="logo">Интернет-магазин</div>
-        <div class="cart">
-          <form action="#" class="search-form">
-            <input
-              type="text"
-              class="search-field"
-              placeholder="Что будем искать ?"
-              v-bind:value="searchLine"
-              v-on:input="inputSearchValue"
-              v-on:keyup.enter="filterGoods"
-            />
-            <button class="btn-search" type="submit">
-              <i class="fas fa-search" v-on:click="filterGoods"></i>
-            </button>
-          </form>
-          <button class="btn-cart" type="button" v-on:click="isVisibleCart">
-            Корзина
-          </button>
-          <div class="cart-block" v-bind:class="{ invisible }">
-            <h3 class="cart-empty" v-if="basketProducts.length === 0">
-              Здесь ничего НЕТ !
-            </h3>
-            <div
-              class="cart-item"
-              v-for="(product, index) in basketProducts"
-              v-bind:data-id="basketProducts[index].id_product"
-              v-bind:key="product.id_product"
-            >
-              <div class="product-bio">
-                <img :src="imgCatalog" alt="Some img" />
-                <div class="product-desc">
-                  <p class="product-title">
-                    {{ basketProducts[index].product_name }}
-                  </p>
-                  <p class="product-quantity">
-                    Колличество: {{ basketProducts[index].quantity }}
-                  </p>
-                  <p class="product-single-price">
-                    {{ basketProducts[index].price }} ₽ за ед.
-                  </p>
-                </div>
-              </div>
-              <div class="right-block">
-                <p class="product-price">
-                  Стоимость {{ basketProducts[index].quantity *
-                    basketProducts[index].price }} ₽
-                </p>
-              </div>
-              <button
-                class="del-btn"
-                v-bind:data-id="basketProducts[index].id_product"
-                v-on:click="removeItem"
-              >
-                &times;
-              </button>
+        <error ref="error" v-bind:class="{ active: isActive }"></error>
+        <header>
+            <div class="logo">Интернет-магазин</div>
+            <div class="cart">
+                <search-form ref="search-form"></search-form>
+                <cart ref="cart"></cart>
             </div>
-          </div>
-        </div>
-      </header>
-      <main>
-        <div class="products">
-          <div
-            class="product-item"
-            v-for="product in filtredProducts"
-            v-bind:key="product.id_product"
-          >
-            <img :src="imgCatalog" alt="Some img" />
-            <div class="desc">
-              <h3>{{ product.product_name }}</h3>
-              <p>ID: {{ product.id_product }}</p>
-              <p>Цена: {{ product.price }}₽</p>
-              <button class="buy-btn" v-on:click="addProduct(product)">
-                Купить
-              </button>
-            </div>
-          </div>
-        </div>
-      </main>
+        </header>
+        <main>
+            <products ref="products"></products>
+        </main>    
     </div>
-    <script
-      src="https://kit.fontawesome.com/d5b67c0e16.js"
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="js/CartComp.js"></script>
+    <script src="js/ProducComp.js"></script>
+    <script src="js/SearchComp.js"></script>
+    <script src="js/ErrorComp.js"></script>
     <script src="js/main.js"></script>
-  </body>
+</body>
 </html>
