--- a/public/index.html
+++ b/public/index.html
@@ -1,31 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
-    <title>Интернет-магазин</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>INERNET-SHOP</title>
+    <script src="https://kit.fontawesome.com/d5b67c0e16.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
 </head>
-<body>
-<div id="app">
-    <header>
-        <div class="logo">Интернет-магазин</div>
-        <div class="cart">
-            <filter-el></filter-el>
-            <cart ref="cart"></cart>
-        </div>
-    </header>
-    <main>
-        <products ref="products"></products>
-        <error ref="error"></error>
-    </main>
-</div>
-    <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="js/CartComp.js"></script>
-    <script src="js/ProducComp.js"></script>
-    <script src="js/FilterComp.js"></script>
-    <script src="js/ErrorComp.js"></script>
-    <script src="js/main.js"></script>
-</body>
+  <body>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
+  </body>
 </html>
